--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">abdulsameeu9@gmail.com</a></p>
+          <p><a href="mailto:abdulsameeu9@gmail.com">Mail</a></p>
         </div>
         <div class="contact-info-container">
           <img
