--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src=""
+                src="./assets/project-2.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -235,22 +235,22 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Sameeu20/handsignal'"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src=""
+                src="./assets/project-3.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -259,13 +259,37 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/tinkerhubkmea/Website_22'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://tinkerhubkmea.github.io/Website_22/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-4.png"
+                alt="Project 4"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Map <br>Project</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/tinkerhubkmea/map-kmea/tree/test'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://tinkerhubkmea.github.io/map-kmea/'"
               >
                 Live Demo
               </button>
