--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </section>
     <section id="about">
-      <h1 class="title">Education</h1>
+      <h1 class="title">Education and About Me</h1>
       <div class="section-container">
 
         <div class="about-details-container">
